# opencanary_web

./: .gitignore  pyproject.toml  server.py  tutorial.md  url.py
dbs/: initdb.py
dbs/models/: EmailConfig.py
handlers/: email.py  password.py
service/: emailconfigservice.py
util/: print_structure.py  task.py
vue-manage-system/: README.md  README_EN.md  package-lock.json
vue-manage-system/src/: main.js
vue-manage-system/src/components/common/: Sidebar.vue
vue-manage-system/src/components/page/: AttackTable.vue  Dashboard.vue  Emailconf.vue  FilterTable.vue  Login.vue  Upload.vue  Whiteiplist.vue
vue-manage-system/src/router/: index.js
